--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Le Quai Antique est le nouveau restaurant du chef Arnaud Michant à Chambéry qui vous propose une cuisine Savoyarde sans artifice."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
